gccida/g2/gen_subroutine_type_die
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subroutine_type_die/src/dwarf2out.c:11456:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subroutine_type_die/src/dwarf2out.c:11464:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subroutine_type_die/src/dwarf2out.c:11512:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_subroutine_type_die/src/obj/dwarf2out.o] Error 1
